--- a/index.html
+++ b/index.html
@@ -6,41 +6,50 @@
     <title>Favorite Movies</title>
   </head>
   <body>
+    <h1>My Favorite Movies</h1>
     <div class="card-group">
         <div class="card">
-          <img src="queenoftears.jpeg">
+          <img src="queenoftears.jpg">
           <div class="layer"></div>
           <div class="info">
           <h1>Queen of Tears</h1>
           <p>
             The series explores the nuances of a married couple going through a difficult time together.
-
          </p>
+           <a href="https://youtu.be/Gg2D8zrzlOA?si=63Fa57dvZrl7Yv3J">Queen of Tears trailer</a>
          <button>Explore</button>
         </div>
     </div>
        <div class="card">
-           <img src="mydemon.jpeg">
+           <img src="mydemon.jpg">
            <div class="layer"></div>
            <div class="info">
            <h1>My Demon</h1>
            <p>
  A supernatural being with powerful abilities, often portrayed as cold and carefree, who can temporarily lose their powers.
 </p>
+<a href="https://youtu.be/D-bAfFqvxZg?si=7RHQnQpHwfgv8rCP">My demon trailer</a>
            <button>Explore</button>
        </div>
      </div>
        <div class="card">
-        <img src="thelegendofthebluesea.jpeg">
+        <img src="thelegendofthebluesea.jpg">
         <div class="layer"></div>
        <div class="info">
       <h1>The Legend of The Blue Sea</h1>
       <p>
         This drama tells the love story of a con-artist and a mermaid who travels across the ocean to find him.
 </p>
+ <a href="https://youtu.be/G_jt3EwBMwU?si=D0fJXhti15uIQj7L">The legend of the blue sea trailer</a>
       <button>Explore</button>
-     </div>
+       </div>
   </div>
 </div>
+<div class="personal-info">
+           <h6>Author:(NathalieAsuncion)<br>!！Σ(￣□￣;)</h6>
+         <p>Email:<a href="mailto:nathaliejame12@gmail.com?subject=Hello&body=I%20would%20like%20to%20contact%20you">nathaliejame12@gmail.com</a></p>
+         <p>Contact No.:<a href="ambot">0926-474-0211</a></p>
+
+    </div>
   </body>
 </html>
